añadiendo archivo readme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    Rolando Desarrollador - Front end
+    Rolando Desarrollador - Front end - Ing. de Sistemas
 </body>
 </html>
