--- a/semana01/dia02-html/index.html
+++ b/semana01/dia02-html/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Bienvenidod ddd as</h1>
+    <h2>2 Bienvenidod ddd as</h2>
 </body>
 </html>
