--- a/semana02/dia01-formularios-tablas-seo/registrar2.html
+++ b/semana02/dia01-formularios-tablas-seo/registrar2.html
@@ -12,12 +12,7 @@
 
 <body>
     <main class="container">
-        <section class="photo"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                class="w-5 h-5">
-                <path
-                    d="M11 5a3 3 0 11-6 0 3 3 0 016 0zM2.615 16.428a1.224 1.224 0 01-.569-1.175 6.002 6.002 0 0111.908 0c.058.467-.172.92-.57 1.174A9.953 9.953 0 018 18a9.953 9.953 0 01-5.385-1.572zM16.25 5.75a.75.75 0 00-1.5 0v2h-2a.75.75 0 000 1.5h2v2a.75.75 0 001.5 0v-2h2a.75.75 0 000-1.5h-2v-2z" />
-            </svg>
-        </section>
+        <img src="https://placehold.co/80.png?text={rs}" />
         <section class="content">
             <h1>Crea una Cuenta</h3>
                 <h5>Ingrese la siguiente información para registrarte.</h5>
@@ -51,7 +46,7 @@
                         <input type="text" placeholder="Dirección línea 2" />
                     </label>
                     <label>Teléfono
-                        <input type="tel" placeholder="Teléfono" />
+                        <input type="tel" placeholder="(51) 999999999" />
                     </label>
                     <label>Código postal
                         <input type="tel" placeholder="Ej: 14001" />
