--- a/semana02/dia01-formularios-tablas-seo/index.html
+++ b/semana02/dia01-formularios-tablas-seo/index.html
@@ -29,7 +29,7 @@
       </label>
       <label>
         Input tipo email
-        <input type="email" placeholder="Correo Ej. soyvictor@gmail.com" />
+        <input type="email" placeholder="Correo Ej. soyrolando@gmail.com" />
       </label>
       <label>
         Input tipo range (Edad)
