--- a/semana07/dia03-javascript-trivia/index.html
+++ b/semana07/dia03-javascript-trivia/index.html
@@ -15,8 +15,10 @@
     </h1>
 
     <section class="flex flex-col px-4 py-6 mb-3 border rounded-lg shadow">
-      <p class="text-md font-medium text-gray-900 mb-4">¿Pregunta 1?</p>
+      <p class="text-md font-medium text-gray-900 mb-4"  id="pregunta1"></p>
 
+      <div class="flex flex-col items-start mb-10" id="alternativa1">
+      </div>
       <div class="flex flex-col items-start mb-10">
         <button type="button" class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-left mr-2 mb-2 w-full">Respuesta en estado sin responder 1</button>
         <button type="button" class="text-white border border-red-600 bg-red-600 font-medium rounded-lg text-sm px-5 py-2.5 text-left mr-2 mb-2 w-full">Respuesta incorrecta 2</button>
@@ -29,8 +31,9 @@
     </section>
 
     <section class="flex flex-col px-4 py-6 mb-3 border rounded-lg shadow">
-      <p class="text-md font-medium text-gray-900 mb-4">¿Pregunta 2?</p>
-
+      <p class="text-md font-medium text-gray-900 mb-4"  id="pregunta2">¿Pregunta 2?</p>
+      <div class="flex flex-col items-start mb-10" id="alternativa2">
+      </div>
       <div class="flex flex-col items-start mb-10">
         <button type="button" class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-left mr-2 mb-2 w-full">Respuesta en estado sin responder 1</button>
         <button type="button" class="text-white border border-red-600 bg-red-600 font-medium rounded-lg text-sm px-5 py-2.5 text-left mr-2 mb-2 w-full">Respuesta incorrecta 2</button>
@@ -43,8 +46,9 @@
     </section>
 
     <section class="flex flex-col px-4 py-6 mb-3 border rounded-lg shadow">
-      <p class="text-md font-medium text-gray-900 mb-4">¿Pregunta 3?</p>
-
+      <p class="text-md font-medium text-gray-900 mb-4"  id="pregunta3">¿Pregunta 3?</p>
+      <div class="flex flex-col items-start mb-10" id="alternativa3">
+      </div>
       <div class="flex flex-col items-start mb-10">
         <button type="button" class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-left mr-2 mb-2 w-full">Respuesta en estado sin responder 1</button>
         <button type="button" class="text-white border border-red-600 bg-red-600 font-medium rounded-lg text-sm px-5 py-2.5 text-left mr-2 mb-2 w-full">Respuesta incorrecta 2</button>
