--- a/semana08/dia03-javascript-es6-fetch-crud/public/index.html
+++ b/semana08/dia03-javascript-es6-fetch-crud/public/index.html
@@ -66,7 +66,7 @@
   </div>
 
   <footer class="container-fluid">
-    Victor Villazón - Julio 2023
+    Rolando Silva Chiu- Julio 2023
   </footer>
 
   <script src="./main.js" type="module"></script>
